fixing issue with items on index page to have three in a row aligned - give a bourbon omega

--- a/app/assets/stylesheets/index.css.scss
+++ b/app/assets/stylesheets/index.css.scss
@@ -58,6 +58,7 @@
 
   .journeys_index_item{
     @include span-columns(4);
+    @include omega(3n);
     background-color: darken($background-color, 5%);  
     padding: 35px 20px 10px 20px;
     margin-top: 80px;
